improve the writing of discussion

--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -85,9 +85,9 @@ The original paper obtained its data from database that contains 12333 records. 
 
 ## Features
 
-Those associations or processed data are stored in the file metaanalysis-data.xlsx. It contains 76 column and 1733 observations. A randomized selection of manuscripts (±15% of the total sample) was used to pilot the code book and make any necessary revisions. The columns can be divided into fifth major data categories. The first part of the variables are identity information of the data such as the author name, year of the study, the sample size and the general population. The second part is the political tendency and people's ethnicity with variables ranging from the percentage of people identifying as a liberal and mean to the white-muslims percentage. The third portion records the detail of each terrorist attack, including the type, date, casualties. The forth part records a series of political attitudes. For example, nationalism and institutional trust, socio-economic conservatism, support for policies that pertains an outgroup. The last part lists the analysis technical data that will be used in meta-analysis code such as Fisher's Z correlation, Regression and so on. From the original survey data, each variable correlates with a survey question asked to participants. In our reproduction, we excluded data that being used for figure3 and figure4 the moderator test. We also made some minor changes and removed insignificant data for clearer replication and viewing. 
+Those associations or processed data are stored in the file metaanalysis-data.xlsx. It contains 76 column and 1733 observations. A randomized selection of manuscripts (±15% of the total sample) was used to pilot the code book and make any necessary revisions.（Godefroidt, 2022) The columns can be divided into fifth major data categories. The first part of the variables are identity information of the data such as the author name, year of the study, the sample size and the general population. The second part is the political tendency and people's ethnicity with variables ranging from the percentage of people identifying as a liberal and mean to the white-muslims percentage. The third portion records the detail of each terrorist attack, including the type, date, casualties. The forth part records a series of political attitudes. For example, nationalism and institutional trust, socio-economic conservatism, support for policies that pertains an outgroup. The last part lists the technical data that will be used in meta-analysis code such as Fisher's Z correlation, regression and so on. From the original survey data, each variable correlates with a survey question asked to participants. In our reproduction, we excluded data that being used for figure3 and figure4 the moderator test. We also made some minor changes and removed insignificant data for clearer replication and viewing. 
 
-In order to better present our replication of the results, The following are measurments of public political opinions provided by the author. They are classfied into 4 categories given in the orignal paper. We selected some important measures 
+In order to better present our replication of the results, The following are measurements of public political opinions provided by the author. They are classfied into 4 categories given in the original paper. We selected some important measures 
 
 [Objective exposure]{.underline}
 
@@ -119,7 +119,7 @@ In order to better present our replication of the results, The following are mea
 
 # Statistical Analysis
 
-In this paper we will replicate figure 2 and table2 of the orginal paper. Fortunately, the author has already compressed all the analysis into one coding file. We selected the corresponding part for each illustration. In terms of the analysis method, Pearson's correlation coefficient is used. According to the orignal paper, the manuscripts of the data they collected used various statistical method. For comparison purposes, each association is converted into a Pearson's correlation coefficient with the sampling variance. The author stressed that to "meaningfully compare and pool effect sizes, all correlations must also reflect the relation between terrorism and sociopolitical attitudes in the same direction."
+In this paper we will replicate figure 2 and table2 of the original paper. Fortunately, the author has already compressed all the analysis into one coding file. We selected the corresponding part for each illustration. In terms of the analysis method, Pearson's correlation coefficient is used. According to the original paper, the manuscripts of the data they collected used various statistical method. For comparison purposes, each association is converted into a Pearson's correlation coefficient with the sampling variance. The author stressed that to "meaningfully compare and pool effect sizes, all correlations must also reflect the relation between terrorism and sociopolitical attitudes in the same direction."[@main_paper]
 
 
 # Results
@@ -354,27 +354,11 @@ knitr::kable(
 
 ## Findings
 
-In this paper, we have replicated the results found by Dancygier, Egami, Jamal, and Rischke. Their analysis sought to explore the correlation between perceived mate competition in municipalities with excess males and its contributions to anti-refugee sentiments and higher crime rates in Germany. Our paper has replicated two of their major findings.
+In this reproduction we successfully replicated and proved the research result of the core findings of the original paper; the interplay between terrorism and general conservatism. Humans possess a natural tendency to favor members of their own group while displaying suspicion or hostility towards outsiders (Tajfel & Turner, 2019[@tajfel2019integrative]). This ingroup-outgroup bias serves as fertile ground for the cultivation of stereotypes, prejudice, and intergroup conflict. In the context of terrorism, extremist ideologies often exploit these psychological tendencies to demonize the targeted groups, portraying them as existential threats to the ingroup's identity and well-being. Even though political position is a person’s own opinion, but this paper used statical method and quantified the perception. After the public has witnessed a terrorism, they will shift to be more unwelcome of the region that terrorism stands for, which in this paper is mainly about Islamism. This will exacerbating pre-existing prejudices and fueling intergroup tensions. Following terrorist incidents, there is often a surge in xenophobic rhetoric, hate crimes, and discriminatory policies targeting marginalized communities (Huddy et al., 2005). This cycle of violence and retaliation perpetuates a vicious cycle of outgroup hostility, further alienating communities and creating fertile recruiting grounds for extremist ideologies.
 
-(1) Non-immigrant German men who live in municipalities with excess male populations are more likely to perceive refugees as threats.
+Ideological Underpinnings Ideology plays a crucial role in shaping terrorist groups and their actions. From nationalist movements to religious extremism, various ideologies have been exploited to justify acts of terrorism. For example, groups like Al-Qaeda and ISIS espouse a distorted interpretation of Islam to justify their violent campaigns, while others, such as the Irish Republican Army (IRA), are driven by nationalist aspirations (Juergensmeyer, 2003[@juergensmeyer2003terror]). Understanding the ideological motivations behind terrorism is essential for devising effective counterterrorism strategies that address root causes rather than merely addressing symptoms. In short, addressing outgroup hostility requires a holistic approach that addresses the root causes of prejudice while promoting social cohesion and resilience against extremist narratives. By fostering empathy, understanding, and solidarity among diverse communities, we can build a more inclusive and resilient society resilient to the influence of terrorism and extremism.
 
-(2) Non-immigrant German men who perceive mate competition are more likely to support violence as the only means to gain the attention of German politicians.
 
-By replicating their results, we hope to apply a Canadian-facing lens to gain insights into Canadian dating markets, the geographical distribution of males and females and their potential impacts on anti-refugee sentiments.
-
-## Canadian Relevance: Case Study on Alberta's population ratios, dating markets and anti-refugee sentiments
-
-To investigate the relevance of Dancygier, Egami, Jamal, and Rischke's discoveries in a Canadian context, we will now explore Canada's only Province with a higher ratio of males than females. 
-
-Alberta is a Province in Canada with a total population of 4,543,111 individuals. It is the only Canadian Province that is more heavily populated by males, with a male population of 2,282,040 compared to 2,261,071 females [@statista]. Thus having a ratio of approximately 1.01, which is comparable to that of the 1st tercile in Figure 1. This means that there are about 11,000 more men than women residing in this Province. Part of the population gap can be explained by age. Alberta has a primarily young population and we typically see that as populations age they exhibit a higher female population [@edmonton_journal]. Its trades centric economy also attracts young male migrants from across Canada [@edmonton_journal]. 
-
-Concerning the original paper, Alberta's population growth can be largely attributed to international immigration which has typically brought equal numbers of males and females [@edmonton_journal]. However, according to the 2021 census, 101, 650 more males are single (not married or living common law and never married) than women [@govcan]. Due to Alberta's young population, highly concentrated with men of working age, a comparison can be made to the term 'mating-aged' used in the original paper to describe males facing higher tensions of dating competition. We thus believe that similar conditions for dating and marriage markets can be made between Alberta and the German municipalities of that the 1st Tercile from Figure 1. 
-
-While population demographics are comparable between that of Alberta and the 1st tercile of German municipalities in the original paper, it is difficult to suggest that potential competition in Albertan dating and marriage markets correlates to anti-refugee sentiments and violence. However, in addressing Albertan immigrant and refugee statistics we will aim to illustrate how these patterns found in Germany can manifest in the context of Alberta. Based on the 2021-2022 Annual Population Report, Alberta welcomed 12,603 immigrants and 21,434 non-permanent residents, which include refugees [@alberta_2023]. 
-
-While previous accounts have suggested that immigration has brought an equal number of males and females, it is safe to assume that Alberta is a growing population, subject to a population with a higher concentration of males [@edmonton_journal]. According to a 2018 paper, at the time 6 in 10 Canadians disagreed when asked if immigration levels were too high, with 35% believing that Canada accepts too many immigrants [@globe_mail]. However, sentiments appear less than positive in Alberta, with Albertans expressing harsher attitudes towards immigrants and refugees [@globe_mail]. 48% of Albertans at the time agreed that refugee claims are not filed from real refugees, with 62% stating that immigrants do not adopt Canadian values, about 10% higher than the national average of 51% [@globe_mail]. The Globe and Mail suggest that part of Alberta's higher anti-refugee attitudes can be attributed to its economy and fears of competition.Dancygier, Egami, Jamal, and Rischke  find that in areas where men significantly outnumber women, there are higher levels of anti-refugee hate crimes [@main_paper]. 
-
-Based on these statistics, we believe that Alberta may experience a similar effect of anti-refugee sentiments in part as a result of increased immigrants/ refugees and competition in a young male-dominated population. However, as stated in their original paper, we call for further research to be conducted on this effect to better understand its implications on non-German countries.
 
 ## Ethical Implications
 
