--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -62,12 +62,11 @@ Terrorists, distinct from ordinary criminals, are perceived to advocate for a po
 Since the tragic events of September 11, 2001 (9/11), a substantial body of literature has emerged addressing these inquiries, yielding varied conclusions. While some scholars express concern that public reactions to terrorism jeopardize democracy, others argue that such responses are limited or transient, and sometimes even absent. However, these studies often explore diverse outcomes, nations, and terrorist threats using a range of methodologies. Consequently, there's a lack of systematic scrutiny regarding how the public's response to terrorism has been studied, resulting in limited understanding of this field's key characteristics and how they influence conclusions.
 
 A [-@main_paper] paper by Amélie Godefroidt from Norwegian University of Science and Technology published in the American Journal of Political Science delves into the moderator analyses, in order to understand how contextual factors influence the relationship between terrorism and political attitudes.   The study discusses an extended model for analyzing the relationship between terrorism and political attitudes, incorporating characteristics of manuscripts and effect sizes as moderators.               
-
 The study examines data from various sources, and details the characteristics of studies in the field, including the types of terrorism studied, geographical focus, and methodological approaches. It notes gaps in longitudinal studies, the dominance of convenience samples, and the focus on majority group perspectives. The study finds that terrorism is associated with increased outgroup hostility, political conservatism, and rally-'round-the-flag responses, though the effects are relatively small. Although the discussion section reflects on the findings, the limitations of the existing literature still exist, such as the predominant focus on Islamist terrorism and the limited geographical scope. It calls for a more nuanced understanding of public responses to terrorism, considering the potential long-term consequences.
 
-Our paper will follow a reproduction of Amélie Godefroidt's implications on the relationship between terrorism and political attitudes. Our paper seeks to replicate their two following research claims, (1) Non-immigrant German men who live in municipalities with excess male populations are more likely to perceive refugees as threats and (2) Non-immigrant German men who perceive mate competition are more likely to support violence as the only means to gain the attention of German politicians. Our reproduction was conducted using the statistical programming language R [@citeR]. To further enable our analysis we employed the use of the following packages: readr [@readr], here [@here], readstata13 [@readstata13], MASS [@MASS], sandwich [@sandwich], lmtest [@lmtest], dplyr [@dplyr], tidyverse [@tidyverse], jtools [@jtools], huxtable [@huxtable], list [@list], knitr [@knitr] and kableExtra [@kableExtra].
+Our paper will follow a reproduction of Amélie Godefroidt's implications on the relationship between terrorism and political attitudes. Our paper seeks to replicate their two following research claims, (1) terrorism, whether through self-reported exposure, manipulated news exposure, anxious or angry appraisals of terrorism, or terrorist risk perceptions, is related to higher levels of outgroup hostility, political conservatism, and, to a lesser extent, rally-'round-the-flag responses, and (2) public responses to terrorism, such as outgroup hostility, political conservatism, and rally-'round-the-flag effects, are particularly noticeable in the United States and when attacks are carried out by outgroup members. Our reproduction was conducted using the statistical programming language R [@citeR]. To further enable our analysis we employed the use of the following packages: readr [@readr], here [@here], readstata13 [@readstata13], MASS [@MASS], sandwich [@sandwich], lmtest [@lmtest], dplyr [@dplyr], tidyverse [@tidyverse], jtools [@jtools], huxtable [@huxtable], list [@list], knitr [@knitr] and kableExtra [@kableExtra].
 
-We begin our paper with a discussion of the data source, the methodologies employed in the original paper and a review of the variables used for our reproduction. We will then conduct a reproduction of select results to verify their findings and improve upon their accessibility. Our paper will conclude with a discussion of our findings where we conduct a case study to apply our findings to Alberta, Canada's only Province with a greater population of males, a discussion of ethical biases, limitations and a push for future research.
+In this paper, we commences with an overview of the data source, examining the methodologies utilized in the original study, and conducting a review of the variables employed for our replication efforts. Following this, we will proceed with reproducing specific results to validate their conclusions and enhance their comprehensibility. Finally, our paper will culminate with an analysis of our findings, an exploration of ethical considerations and biases, a discussion of the limitations encountered during the replication process, and an advocacy for further research in the field.
 
 # Data
 
