--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -287,3 +287,17 @@
   publisher={University of California Press},
   url={http://www.jstor.org/stable/10.1525/j.ctt4cgfbx}
 }
+
+@article{huddy2005threat,
+  title={Threat, Anxiety, and Support of Antiterrorism Policies},
+  author={Huddy, Leonie and Feldman, Stanley and Capelos, Tereza and Provost, Colin},
+  journal={American Journal of Political Science},
+  volume={49},
+  number={3},
+  pages={593},
+  month={July},
+  year={2005},
+  doi={10.2307/3647734},
+  url={https://doi.org/10.2307/3647734},
+}
+
