--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -353,7 +353,7 @@ knitr::kable(
 
 ## Findings
 
-In this reproduction we successfully replicated and proved the research result of the core findings of the original paper; the interplay between terrorism and general conservatism. Humans possess a natural tendency to favor members of their own group while displaying suspicion or hostility towards outsiders (Tajfel & Turner, 2019[@tajfel2019integrative]). This ingroup-outgroup bias serves as fertile ground for the cultivation of stereotypes, prejudice, and intergroup conflict. In the context of terrorism, extremist ideologies often exploit these psychological tendencies to demonize the targeted groups, portraying them as existential threats to the ingroup's identity and well-being. Even though political position is a person’s own opinion, but this paper used statical method and quantified the perception. After the public has witnessed a terrorism, they will shift to be more unwelcome of the region that terrorism stands for, which in this paper is mainly about Islamism. This will exacerbating pre-existing prejudices and fueling intergroup tensions. Following terrorist incidents, there is often a surge in xenophobic rhetoric, hate crimes, and discriminatory policies targeting marginalized communities (Huddy et al., 2005). This cycle of violence and retaliation perpetuates a vicious cycle of outgroup hostility, further alienating communities and creating fertile recruiting grounds for extremist ideologies.
+In this reproduction we successfully replicated and proved the research result of the core findings of the original paper; the interplay between terrorism and general conservatism. Humans possess a natural tendency to favor members of their own group while displaying suspicion or hostility towards outsiders (Tajfel & Turner, 2019[@tajfel2019integrative]). This ingroup-outgroup bias serves as fertile ground for the cultivation of stereotypes, prejudice, and intergroup conflict. In the context of terrorism, extremist ideologies often exploit these psychological tendencies to demonize the targeted groups, portraying them as existential threats to the ingroup's identity and well-being. Even though political position is a person’s own opinion, but this paper used statical method and quantified the perception. After the public has witnessed a terrorism, they will shift to be more unwelcome of the region that terrorism stands for, which in this paper is mainly about Islamism. This will exacerbating pre-existing prejudices and fueling intergroup tensions. Following terrorist incidents, there is often a surge in xenophobic rhetoric, hate crimes, and discriminatory policies targeting marginalized communities (Huddy et al., 2005[@huddy2005threat]). This cycle of violence and retaliation perpetuates a vicious cycle of outgroup hostility, further alienating communities and creating fertile recruiting grounds for extremist ideologies.
 
 Ideological Underpinnings Ideology plays a crucial role in shaping terrorist groups and their actions. From nationalist movements to religious extremism, various ideologies have been exploited to justify acts of terrorism. For example, groups like Al-Qaeda and ISIS espouse a distorted interpretation of Islam to justify their violent campaigns, while others, such as the Irish Republican Army (IRA), are driven by nationalist aspirations (Juergensmeyer, 2003[@juergensmeyer2003terror]). Understanding the ideological motivations behind terrorism is essential for devising effective counterterrorism strategies that address root causes rather than merely addressing symptoms. In short, addressing outgroup hostility requires a holistic approach that addresses the root causes of prejudice while promoting social cohesion and resilience against extremist narratives. By fostering empathy, understanding, and solidarity among diverse communities, we can build a more inclusive and resilient society resilient to the influence of terrorism and extremism.
 
